--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "TokenOpetions": {
+    "Audience": "engin@engin.com",
+    "Issuer": "engin@engin.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey"  : "mysupersecretkeymysupersecretkey"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
