--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,9 +1,9 @@
 {
-  "TokenOpetions": {
-    "Audience": "engin@engin.com",
-    "Issuer": "engin@engin.com",
+  "TokenOptions": {
+    "Audience": "parviz@parviz.com",
+    "Issuer": "parviz@parviz.com",
     "AccessTokenExpiration": 10,
-    "SecurityKey"  : "mysupersecretkeymysupersecretkey"
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
 
   },
   "Logging": {
